Add active/inactive color settings

--- a/VRCHapticsLite/App.config
+++ b/VRCHapticsLite/App.config
@@ -94,6 +94,42 @@
       <setting name="RightArm_Height" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="Active_MinR" serializeAs="String">
+        <value>128</value>
+      </setting>
+      <setting name="Active_MaxR" serializeAs="String">
+        <value>255</value>
+      </setting>
+      <setting name="Active_MinG" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Active_MaxG" serializeAs="String">
+        <value>15</value>
+      </setting>
+      <setting name="Active_MinB" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Active_MaxB" serializeAs="String">
+        <value>15</value>
+      </setting>
+      <setting name="Inactive_MinR" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Inactive_MaxR" serializeAs="String">
+        <value>15</value>
+      </setting>
+      <setting name="Inactive_MinG" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Inactive_MaxG" serializeAs="String">
+        <value>15</value>
+      </setting>
+      <setting name="Inactive_MinB" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Inactive_MaxB" serializeAs="String">
+        <value>15</value>
+      </setting>
     </VRCHapticsLite.Properties.Settings>
   </userSettings>
 </configuration>
